<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.box_tech.fireworksmachine.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/seperator" />

    <LinearLayout
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@+id/category_bar"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/category_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/device"
            android:textAlignment="center"
            android:focusable="true" />

        <TextView
            android:id="@+id/tab_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_control"
            android:text="@string/control"
            android:textAlignment="center"
            android:focusable="true" />

        <TextView
            android:id="@+id/tab_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_shop"
            android:text="@string/shop"
            android:textAlignment="center"
            android:focusable="true" />

        <TextView
            android:id="@+id/tab_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_my"
            android:text="@string/my"
            android:textAlignment="center"
            android:focusable="true" />
    </LinearLayout>
</RelativeLayout>
