<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?android:attr/listDivider"
    android:orientation="vertical"
    android:showDividers="middle">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/temperature"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt_edit_temperature_threshold"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="30/500~510" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ℃"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/internal_temperature"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_supply_voltage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ℃"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_1_speed"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_motor_1_default_speed"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_motor_speed_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/value_text_size"
                tools:text="20/20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  rpm"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_2_speed"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_motor_2_default_speed"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_motor_speed_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/value_text_size"
                tools:text="20/20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  rpm"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_3_speed"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_motor_3_default_speed"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_motor_speed_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/value_text_size"
                tools:text="20/20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  rpm"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_4_speed"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_motor_4_default_speed"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_motor_speed_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/value_text_size"
                tools:text="20/20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  rpm"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dmx_address"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_dmx_addr"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_dmx_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/value_text_size"
                tools:text="24" />
        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/pitch"
            android:textSize="@dimen/value_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="°"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/ultrasonic_ranging"
            android:textSize="@dimen/value_text_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ultrasonic_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" m"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/infrared_distance_measurement"
            android:textSize="@dimen/value_text_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_infrared_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" m"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/rest_time"
            android:textSize="@dimen/value_text_size" />


        <TextView
            android:id="@+id/tv_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/value_text_size"
            tools:text="12" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gualiao_time"
            android:textSize="@dimen/value_text_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_gualiao_time"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_gualiao_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="2.1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="s"
                android:textSize="@dimen/value_text_size"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/device_id"
            android:textSize="@dimen/value_text_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_edit_device_id"
                android:layout_width="@dimen/edit_icon_size"
                android:layout_height="@dimen/edit_icon_size"
                android:layout_gravity="center_vertical"
                android:background="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/tv_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/value_text_size"
                tools:text="3229" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonStyle"
            android:id="@+id/bt_jet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/jet" />

        <Button
            style="?android:attr/buttonStyle"
            android:id="@+id/bt_jet_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/jet_stop" />

        <Button
            android:id="@+id/bt_add_material"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_material" />

        <Button
            android:id="@+id/bt_lcd"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lcd" />
    </LinearLayout>


</LinearLayout>
