<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:text="@string/motor_1_speed" />

                <com.lantouzi.wheelview.WheelView
                    android:id="@+id/et_motor_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:lwvCenterMarkTextSize="32sp"
                    app:lwvHighlightColor="@color/colorHighlightTempLow"
                    app:lwvMarkColor="@color/colorTempMark"
                    app:lwvMarkTextColor="@color/colorTempTextMark"
                    app:lwvMarkTextSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:text="@string/motor_2_speed" />

                <com.lantouzi.wheelview.WheelView
                    android:id="@+id/et_motor_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:lwvCenterMarkTextSize="32sp"
                    app:lwvHighlightColor="@color/colorHighlightTempHigh"
                    app:lwvMarkColor="@color/colorTempMark"
                    app:lwvMarkTextColor="@color/colorTempTextMark"
                    app:lwvMarkTextSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/motor_3_speed" />

                <com.lantouzi.wheelview.WheelView
                    android:id="@+id/et_motor_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:lwvCenterMarkTextSize="32sp"
                    app:lwvHighlightColor="@color/colorHighlightTempLow"
                    app:lwvMarkColor="@color/colorTempMark"
                    app:lwvMarkTextColor="@color/colorTempTextMark"
                    app:lwvMarkTextSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:text="@string/motor_4_speed" />

                <com.lantouzi.wheelview.WheelView
                    android:id="@+id/et_motor_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:lwvCenterMarkTextSize="32sp"
                    app:lwvHighlightColor="@color/colorHighlightTempHigh"
                    app:lwvMarkColor="@color/colorTempMark"
                    app:lwvMarkTextColor="@color/colorTempTextMark"
                    app:lwvMarkTextSize="16sp" />
        </LinearLayout>
</LinearLayout>